--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
     "name": "My Codespace",
     "image": "mcr.microsoft.com/vscode/devcontainers/base:ubuntu-22.04",
-    "postCreateCommand": "sudo apt-get update -y && sudo apt-get install -y gcc make valgrind gdb && sudo apt update -y && sudo apt install -y python3-pip && sudo python3 -m pip install --upgrade pip setuptools && sudo python3 -m pip install norminette",
+    "postCreateCommand": "sudo apt-get update -y && sudo apt-get install -y gcc make valgrind gdb libx11-dev libxext-dev python3-pip && sudo python3 -m pip install --upgrade pip setuptools && sudo python3 -m pip install norminette",
     "customizations": {
         "vscode": {
             "settings": {
